# jacaranda-research-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_BRIEF.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/jacaranda_api/: __init__.py  config.py  main.py
apps/api/src/jacaranda_api/e2e/: __init__.py  cli.py  mock_providers.py  models.py  orchestrator.py  presentation.py  validation.py
apps/api/src/jacaranda_api/llm/: __init__.py  catalog.py  contracts.py  errors.py  http_client.py  models.py  openrouter.py  schema_loader.py
apps/api/src/jacaranda_api/market_data/: __init__.py  contracts.py  errors.py  models.py  registry.py  source_registry.py  symbols.py
apps/api/src/jacaranda_api/market_data/adapters/: __init__.py  akshare.py  base.py  finnhub.py  fmp.py  sec.py
apps/api/tests/: conftest.py  test_e2e_mock_slice.py  test_health.py  test_llm_catalog.py  test_market_data_adapters.py  test_market_data_models.py  test_market_data_registry.py  test_market_data_symbols.py  test_openrouter_http_client.py  test_openrouter_provider.py
apps/api/tests/fixtures/market_data/: akshare_quote.json  finnhub_quote.json  fmp_quote.json  sec_fact.json
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/tests/: health-route.test.ts
docs/: ARCHITECTURE.md  DECISIONS.md  MOCK_VERTICAL_SLICE.md  PRESENTATION_SYSTEM.md  RESEARCH_METHODOLOGY.md  TASK_BOARD.md
