[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "jacaranda-api"
version = "0.1.0"
description = "Jacaranda Research OS API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.14,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=jacaranda_api --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["jacaranda_api"]
