[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "jacaranda-api"
version = "0.1.0"
description = "Jacaranda Research OS API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema>=4.23,<5",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "Pillow>=10,<12",
  "python-pptx>=1.0,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
jacaranda-mock-e2e = "jacaranda_api.e2e.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<3",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=jacaranda_api --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["jacaranda_api"]
